--- a/css/style.css
+++ b/css/style.css
@@ -190,8 +190,7 @@ section a {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding: 15px 100px 50px 100px;
-    margin: 0;
+    padding: 15px 100px 100px 100px;
   }
 }
 
@@ -199,7 +198,7 @@ section a {
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
-  width: 21em;
+  width: 93%;
   height: 269px;
   background-color: #fff;
   box-shadow: 2px 7px 15px -13px #888888;
@@ -208,8 +207,8 @@ section a {
 }
 @media screen and (min-width: 993px) {
   .card_choice {
-    width: 53em;
-    height: 26em;
+    width: 46%;
+    height: 29em;
   }
 }
 .card_choice h3 {
@@ -230,7 +229,7 @@ section a {
 @media screen and (min-width: 993px) {
   .card_choice img {
     width: 100%;
-    height: 21em;
+    height: 24em;
   }
 }
 .card_choice .heart {
