--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
 .container {
   margin: auto;
   font-family: "Roboto", sans-serif;
-  font-weight: bold;
 }
 
 /*Header*/
@@ -145,18 +144,19 @@
 }
 @media screen and (min-width: 993px) {
   .btn {
-    width: 29%;
+    width: 22%;
   }
 }
 .btn:hover {
   background-color: #f5edff;
 }
+.btn:hover i {
+  color: #9356DC;
+}
 .btn i {
   color: #888888;
-  margin: 0 26px 0 32px;
-}
-.btn i:hover {
-  color: #9356DC;
+  margin: 0 32px 0 33px;
+  font-size: 16px;
 }
 
 /*Main*/
@@ -207,8 +207,8 @@ section a {
 }
 @media screen and (min-width: 993px) {
   .card_choice {
-    width: 46%;
-    height: 29em;
+    width: 34%;
+    height: 22em;
   }
 }
 .card_choice h3 {
@@ -217,7 +217,7 @@ section a {
 }
 @media screen and (min-width: 993px) {
   .card_choice h3 {
-    margin: 16px, 0 0 26px;
+    margin: 16px 0 0 26px;
   }
 }
 .card_choice img {
@@ -229,7 +229,7 @@ section a {
 @media screen and (min-width: 993px) {
   .card_choice img {
     width: 100%;
-    height: 24em;
+    height: 16em;
   }
 }
 .card_choice .heart {
@@ -331,7 +331,7 @@ section a {
   object-fit: cover;
 }
 
-/*Menu La palette du goût*/
+/*Section menu*/
 fieldset {
   display: flex;
   flex-direction: column;
@@ -370,6 +370,7 @@ fieldset {
   padding: 0.5rem;
   border-bottom: 3px solid #99e2d0;
   width: 12%;
+  font-weight: normal;
 }
 
 .cards_menu {
