--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,9 +18,6 @@ $pinklight: #f5edff;
 @mixin shrikhand {
     font-family: 'Shrikhand', sans-serif;
 }
-@mixin bold {
-    font-weight: bold;
-}
 @mixin card-shadow {
     box-shadow: 2px 7px 15px -13px $darkengray;
 }
@@ -55,7 +52,6 @@ $pinklight: #f5edff;
 .container {
     margin: auto;
     @include roboto;
-    @include bold;
 }
 
 /*Header*/ 
@@ -135,7 +131,7 @@ $pinklight: #f5edff;
 /*Fonctionnement*/ 
 
 .explain {
-    @include bold;
+    font-weight: bold;
     font-size: 1.2rem;
     padding: 60px 15px 100px 27px;
         h2 {
@@ -182,17 +178,18 @@ $pinklight: #f5edff;
     width: 100%;
     height: 86px;
     @include desktop-only {
-            width: 29%;
+            width: 22%;
         }
         &:hover {
             background-color: $pinklight;
+            i {
+                color: $colorprimary;
+            }
         }
             i {
                 color: $darkengray;
-                margin: 0 26px 0 32px;
-                    &:hover {
-                        color: $colorprimary;
-                    }
+                margin: 0 32px 0 33px;
+                font-size: 16px;
             }
 }
 
@@ -238,14 +235,14 @@ section {
     position: relative;
     margin: 48px 0 0 0;
     @include desktop-only {
-        width: 46%;
-        height: 29em;
+        width: 34%;
+        height: 22em;
     }
         h3 {
             margin: 4px 0 0 13px;
             font-size: 1.5rem;
             @include desktop-only {
-                margin: 16px, 0 0 26px;
+                margin: 16px 0 0 26px;
             }
         }
             img {
@@ -255,7 +252,7 @@ section {
                 border-radius: 1rem 1rem 0 0;
                 @include desktop-only {
                     width: 100%;
-                    height: 24em;
+                    height: 16em;
                 }
             }
              .heart {
@@ -355,7 +352,7 @@ section {
     }
 }
 
-/*Menu La palette du goût*/ 
+/*Section menu*/ 
 
 fieldset {
     @include column;
@@ -394,6 +391,7 @@ fieldset {
     padding: 0.5rem;
     border-bottom: 3px solid $colortertiary;
     width: 12%;
+    font-weight: normal;
 }
 
 .cards_menu {
