--- a/css/style.css
+++ b/css/style.css
@@ -357,11 +357,12 @@ fieldset {
 
 .all_cards-menu {
   display: flex;
+  flex-direction: column;
 }
 @media screen and (min-width: 993px) {
   .all_cards-menu {
+    flex-direction: row;
     gap: 80px;
-    margin: 30px;
   }
 }
 
@@ -382,26 +383,33 @@ fieldset {
   margin: 41px 52px 0 0;
   padding: 21px 0 11px 18px;
   cursor: pointer;
+  position: relative;
 }
-.cards_menu h2, .cards_menu p {
-  margin: 0 17px 15px 8px;
+@media screen and (min-width: 993px) {
+  .cards_menu {
+    margin: 40px 0 0 0;
+    width: 32em;
+  }
+}
+.cards_menu .price {
+  position: absolute;
+  right: 8%;
+  bottom: 30%;
+  font-weight: bold;
 }
 .cards_menu label {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
 }
-@media screen and (min-width: 993px) {
-  .cards_menu label {
-    display: flex;
-    flex-direction: column;
-  }
+.cards_menu label .menu-title {
+  font-weight: bold;
 }
-.cards_menu label p {
-  margin: -31px 20px 0 0;
+.cards_menu label .accomp {
+  margin-top: 10px;
 }
 .cards_menu label input {
   position: absolute;
-  left: -14em;
+  left: -1999px;
 }
 .cards_menu label i {
   color: transparent;
