essais petit coeur

--- a/css/style.css
+++ b/css/style.css
@@ -232,13 +232,28 @@ section a {
     height: 16em;
   }
 }
-.card_choice .heart {
+.card_choice .fa-heart {
   font-size: 37px;
   color: #888888;
   position: absolute;
-  z-index: 2;
-  right: 5%;
   bottom: 5%;
+  right: 5%;
+  z-index: 1;
+}
+.card_choice .fa-heart:hover::after {
+  opacity: 1;
+}
+.card_choice .fa-heart:hover::after {
+  content: "\f004";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: -1;
+  font-weight: bold;
+  color: inherit;
+  background: linear-gradient(#9356DC, #ff79da);
 }
 .card_choice .new {
   background-color: #99e2d0;
