--- a/sass/style.scss
+++ b/sass/style.scss
@@ -256,26 +256,25 @@ section {
                 }
             }
              .heart {
-                i {
                 font-size: 37px;
                 color: $darkengray;
-                position: absolute;
+                position: relative;
                 bottom: 5%;
                 right: 5%;
                 z-index: 1;
                      &:hover {
-                         opacity: 0;
-                         z-index: -1;
-                        .heart-full > i {                            
+                        .heart__full {                            
                             opacity: 1; 
-                            z-index: 1;
-                        }
                      } 
                 }
             }
                     .heart-full {
                         i {
-                            position: relative;
+                            position: absolute;
+                            top: 0;
+                            right: 0;
+                            bottom: 0;
+                            left: 0;
                             font-size: 37px;
                             font-weight: bold;
                             background-clip: text;
