--- a/sass/style.css
+++ b/sass/style.css
@@ -190,7 +190,7 @@
 
 @media screen and (min-width: 993px) {
   .btn {
-    width: 22%;
+    width: 30%;
   }
 }
 
@@ -204,7 +204,7 @@
 
 .btn i {
   color: #888888;
-  margin: 0 32px 0 33px;
+  margin: 0 32px 0 18px;
   font-size: 16px;
 }
 
@@ -323,7 +323,7 @@ section a {
   opacity: 1;
 }
 
-.card_choice .heart-full i {
+.card_choice .heart .heart-full {
   position: absolute;
   top: 0;
   right: 0;
