--- a/sass/style.css
+++ b/sass/style.css
@@ -335,6 +335,9 @@ section a {
   -webkit-text-fill-color: transparent;
   background: -webkit-linear-gradient(#9356DC, #ff79da);
   z-index: -1;
+  opacity: 0;
+  -webkit-transition: opacity 250ms;
+  transition: opacity 250ms;
   left: 89%;
   bottom: 38px;
 }
