--- a/sass/style.scss
+++ b/sass/style.scss
@@ -279,6 +279,8 @@ section {
                             -webkit-text-fill-color: transparent;
                             background: -webkit-linear-gradient(#9356DC, #ff79da);
                             z-index: -1;
+                            opacity: 0;
+                            transition: opacity 250ms;
                             left: 89%;
                             bottom: 38px;
                         }
