--- a/sass/style.scss
+++ b/sass/style.scss
@@ -178,7 +178,7 @@ $pinklight: #f5edff;
     width: 100%;
     height: 86px;
     @include desktop-only {
-            width: 22%;
+            width: 30%;
         }
         &:hover {
             background-color: $pinklight;
@@ -188,7 +188,7 @@ $pinklight: #f5edff;
         }
             i {
                 color: $darkengray;
-                margin: 0 32px 0 33px;
+                margin: 0 32px 0 18px;
                 font-size: 16px;
             }
 }
@@ -256,36 +256,35 @@ section {
                 }
             }
              .heart {
-                i {
                 font-size: 37px;
                 color: $darkengray;
-                position: absolute;
-                bottom: 5%;
-                right: 5%;
+                position: relative;
+                bottom: 15%;
+                left: 90%;
                 z-index: 1;
                      &:hover {
-                         opacity: 0;
-                         z-index: -1;
-                        .heart-full > i {                            
+                        &__full {                            
                             opacity: 1; 
-                            z-index: 1;
                         }
                      } 
                 }
-            }
-                    .heart-full {
-                        i {
-                            position: relative;
+                    .heart__full {
+                            position: absolute;
+                            top: 0;
+                            right: 0;
+                            bottom: 0;
+                            left: 0;
                             font-size: 37px;
                             font-weight: bold;
                             background-clip: text;
                             -webkit-text-fill-color: transparent;
                             background: -webkit-linear-gradient(#9356DC, #ff79da);
+                            transition: opacity 250ms;
                             z-index: -1;
+                            opacity: 0;
                             left: 89%;
                             bottom: 38px;
                         }
-                    }
                 .new {
                 background-color: $colortertiary;
                 color: rgb(0, 143, 79);
