--- a/sass/style.scss
+++ b/sass/style.scss
@@ -261,12 +261,12 @@ section {
                 position: absolute;
                 bottom: 5%;
                 left: 90%;
-                background-clip: text;
                 transform: translateY(-50%); 
                 cursor: pointer;
              }
                 .fas {
                         -webkit-text-fill-color: transparent;
+                        -webkit-background-clip: text;
                         background: -webkit-linear-gradient($colorprimary, $colorsecondary);
                         transition: opacity 250ms;
                         opacity: 0; 
