--- a/sass/style.scss
+++ b/sass/style.scss
@@ -182,6 +182,7 @@ $pinklight: #f5edff;
         }
         &:hover {
             background-color: $pinklight;
+            box-shadow: 2px 7px 15px -8px #888888;
             i {
                 color: $colorprimary;
             }
@@ -234,6 +235,13 @@ section {
     @include card-shadow;
     position: relative;
     margin: 48px 0 0 0;
+    transform: scale(1);
+    &:hover {
+        transform: scale(1.1);
+        box-shadow: 2px 7px 15px -8px #888888;
+        transform-origin: bottom;
+        transition: 400ms;
+    }
     @include desktop-only {
         width: 34%;
         height: 22em;
