ajout animations cards menu

--- a/css/style.css
+++ b/css/style.css
@@ -403,12 +403,19 @@ fieldset {
   padding: 21px 0 11px 18px;
   cursor: pointer;
   position: relative;
+  scale: 0;
 }
 @media screen and (min-width: 993px) {
   .cards_menu {
     margin: 40px 0 0 0;
-    width: 32em;
+    width: 23em;
+    height: 86px;
   }
+}
+.cards_menu:hover {
+  transform: scale(1.1);
+  box-shadow: 2px 7px 15px -8px #888888;
+  transition: 400ms;
 }
 .cards_menu .price {
   position: absolute;
